# RHA

./: .gitignore  README.md  paket.dependencies  setup.sh
SW/: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.save  doxygen_documentation.conf  makeAnalysis.sh  makeAnalysis.sh~  output  output2  output3  output4  output_now  platformio.ini
SW/OLD/Cytron_G15Shield/: Cytron_G15Shield.cpp  Cytron_G15Shield.h
SW/OLD/G15/: G15.cpp  G15.h
SW/OLD/G15_1/: G15.h
SW/RHAspberry/: rhaspberry_wrapper.cpp
SW/RHAspberry/gci/: gci.cpp  gci.h
SW/RHAspberry/logger/: logger.cpp  logger.h
SW/code_analysis/code_cloud/: code_codecloud_2017_08_25.html  test_codecloud_2017_08_25.html
SW/code_analysis/csv/: ca_.csv  ca_2017.09.11.csv  ca_2017_01_27.csv  ca_2017_08_23.csv  ca_2017_08_24.csv  ca_2017_08_25.csv  ca_2017_08_26.csv  ca_2017_08_27.csv  ca_2017_08_29.csv  ca_2017_08_31.csv  ca_2017_09_07.csv  ca_2017_09_08.csv  ca_2017_09_09.csv  ca_2017_09_12.csv  ca_2017_09_13.csv  ca_2017_09_14.csv  ca_2017_09_15.csv  ca_2017_09_16.csv  ca_2017_09_17.csv  ca_2017_09_19.csv  ca_2017_09_20.csv  ca_2017_09_21.csv  ca_2017_09_22.csv  ca_2017_09_23.csv  ca_2017_09_24.csv  ca_2017_09_25.csv  ca_2017_09_26.csv  ca_2017_09_28.csv  ca_2017_09_29.csv  ca_2017_09_30.csv  ca_2017_10_31.csv  ca_2017_11_01.csv  ca_2017_11_02.csv  ca_2017_11_03.csv  ca_2017_11_07.csv  ca_2017_11_21.csv  ca_2017_11_22.csv  ca_2017_12_21.csv  ca_2017_12_22.csv  ca_2017_12_23.csv  (+144 more)
SW/code_analysis/debug_count/: code_.txt  code_2017_01_27.txt  code_2017_02_05.txt  code_2017_08_23.txt  code_2017_08_24.txt  code_2017_08_24.txt~  code_2017_08_25.txt  code_2017_08_26.txt  code_2017_08_27.txt  code_2017_08_28.txt  code_2017_08_29.txt  code_2017_08_30.txt  code_2017_08_31.txt  code_2017_09_08.txt  code_2017_09_09.txt  code_2017_09_11.txt  code_2017_09_12.txt  code_2017_09_13.txt  code_2017_09_15.txt  code_2017_09_16.txt  code_2017_09_19.txt  code_2017_09_20.txt  code_2017_09_21.txt  code_2017_09_22.txt  code_2017_09_23.txt  code_2017_09_26.txt  code_2017_09_28.txt  code_2017_09_29.txt  code_2017_09_30.txt  code_2017_10_31.txt  code_2017_11_01.txt  code_2017_11_02.txt  code_2017_11_03.txt  code_2017_11_07.txt  code_2017_11_22.txt  code_2017_12_22.txt  code_2017_12_25.txt  code_2018_01_07.txt  code_2018_01_21.txt  code_2018_01_23.txt  (+12 more)
SW/code_analysis/scripts/: analyse_code_format.sh  cloc_list.py  code_format  debug_list.py  drawPlot.py  extractClocTable.py  extractDebugTable.py  extractLizardTable.py  process_cloc_file.sh
SW/code_analysis/txt/: ca_.txt  ca_2017_08_23.txt  ca_2017_08_24.txt  ca_2017_08_25.txt  ca_2017_08_26.txt  ca_2017_08_27.txt  ca_2017_08_28.txt  ca_2017_08_29.txt  ca_2017_08_30.txt  ca_2017_09_07.txt  ca_2017_09_08.txt  ca_2017_09_09.txt  ca_2017_09_11.txt  ca_2017_09_12.txt  ca_2017_09_13.txt  ca_2017_09_14.txt  ca_2017_09_15.txt  ca_2017_09_16.txt  ca_2017_09_17.txt  ca_2017_09_19.txt  ca_2017_09_20.txt  ca_2017_09_21.txt  ca_2017_09_22.txt  ca_2017_09_23.txt  ca_2017_09_24.txt  ca_2017_09_25.txt  ca_2017_09_26.txt  ca_2017_09_28.txt  ca_2017_09_29.txt  ca_2017_09_30.txt  ca_2017_10_31.txt  ca_2017_11_01.txt  ca_2017_11_02.txt  ca_2017_11_03.txt  ca_2017_11_07.txt  ca_2017_11_21.txt  ca_2017_11_22.txt  ca_2017_12_21.txt  ca_2017_12_22.txt  ca_2017_12_23.txt  (+140 more)
SW/code_analysis/xml/: ca_2017.09.11.xml  ca_2017_08_23.xml  ca_2017_08_24.xml  ca_2017_08_25.xml  ca_2017_08_26.xml  ca_2017_08_27.xml  ca_2017_08_28.xml  ca_2017_08_29.xml  ca_2017_09_07.xml  ca_2017_09_08.xml  ca_2017_09_09.xml  ca_2017_09_12.xml  ca_2017_09_13.xml  ca_2017_09_14.xml  (+164 more)
SW/src/: check_memory.cpp_  main.cpp  main.cpp.test  main.cpp_RHA  main_utilities.cpp  main_utilities.cpp_  utilities.cpp  utilities.h
SW/test/: output_export.cpp  perform_test.sh  perform_test.sh.save
SW/utilities/: getSerialData.py  log_execution.py  python_interface.py  regulatorDataGraf.py  regulator_data_test_10.py  regulator_data_test_11.py  regulator_data_test_12.py  regulator_data_test_13.py  regulator_data_test_14.py  regulator_data_test_15.py  regulator_data_test_8.py  regulator_data_test_9.py  slopeDataGraf.py  step_slopeDataGraf.py  step_slope_average_data_test_1.py  torquevsspeed.py
(+481 files in other folders)
